# CRUD_task

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_tasks_table.py  0003_add_auth_fields_and_task_owner.py  0004_create_comments_table.py  0005_add_task_avatar_url.py
app/: main.py  settings.py
app/api/: auth.py  comments.py  system.py  tasks.py  users.py
app/core/: auth.py  exceptions.py  security.py  storage.py
app/models/: __init__.py  comment.py  task.py  user.py
app/repositories/: comment_repository.py  task_repository.py  user_repository.py
app/schemas/: comment.py  task.py  user.py
app/services/: comment_service.py  task_service.py  user_service.py
tests/: conftest.py
tests/integration/: test_comments.py  test_create_task.py
tests/unit/api/: test_system_endpoints.py
tests/unit/core/: test_exception_handlers.py
tests/unit/services/: test_task_avatar_service.py  test_task_service.py
